--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "D": "^1.0.0",
     "dotenv": "^17.2.3",
